--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,12 @@ body {
   }
 }
 
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid;
+}
+
 #showcase {
   position: relative;
   background: url('../img/mountains.jpg');
