--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,6 @@ body {
     font-size: 1.4rem;
     padding-right: 1.4rem; }
 
-.info-header {
-  width: 50%;
-  margin: auto;
-  border-bottom: 1px #ddd solid; }
-
 #showcase {
   position: relative;
   background: url("../img/mountains.jpg");
@@ -25,6 +20,19 @@ body {
     left: 0;
     width: 100%;
     height: 100%; }
+
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid; }
+
+#authors img {
+  margin-top: -50px; }
+#authors .card:hover {
+  background: #3292a6;
+  color: #fff; }
+#authors .fab {
+  color: #fff; }
 
 @media (max-width: 768px) {
   #showcase {
