--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,12 +16,6 @@ body {
   }
 }
 
-.info-header {
-  width: 50%;
-  margin: auto;
-  border-bottom: 1px #ddd solid;
-}
-
 #showcase {
   position: relative;
   background: url('../img/mountains.jpg');
@@ -34,6 +28,27 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid;
+}
+
+#authors {
+  img {
+    margin-top: -50px;
+  }
+
+  .card:hover {
+    background: $primary;
+    color: #fff;
+  }
+
+  .fab {
+    color: #fff;
   }
 }
 
